# lore

./: Cargo.toml
docs/developing/decisions/: 00011-per-tenant-storage-isolation.md  00017-dynamodb-bucket-resolver.md
docs/reference/: lore-cli-commands.md
docs/tutorials/: quickstart.md
lore-aws/src/: s3.rs
lore-aws/src/store/: bucket_resolver.rs  immutable_store.rs  mod.rs
lore-client/src/cli/commands/: repository.rs
lore-credential/: Cargo.toml
lore-credential/src/: token_store.rs
lore-postgres/: Cargo.toml
lore-postgres/migrations/: 0001_init.sql
lore-postgres/src/: lib.rs  metrics.rs  pool.rs
lore-postgres/src/store/: immutable_store.rs  lock_store.rs  mod.rs  mutable_store.rs
lore-postgres/tests/: concurrency.rs  immutable_store.rs  lock_store.rs  mutable_store.rs
lore-proto/proto/lore/model/v1/: model.proto
lore-proto/src/grpc/: lore.model.v1.rs
lore-proto/tests/: v1_model.rs
lore-revision/src/: branch.rs  interface.rs
lore-revision/src/repository/: create.rs  status.rs
lore-revision/tests/: parallel_reads.rs
lore-server/: Cargo.toml  DOCKER.md  README.md
lore-server/config/: default.toml
lore-server/examples/: config-aws.toml  config-postgres.toml
lore-server/src/: server.rs  settings.rs
lore-server/src/grpc/: lock_service.rs  mod.rs  revision_service.rs  server.rs  storage_service.rs
lore-server/src/grpc/handlers/: branch_metadata_set.rs
lore-server/src/grpc/revision/v1/: branch_get.rs  branch_list.rs  branch_metadata_set.rs  branch_record.rs  service.rs
lore-server/src/grpc/storage/v1/: mutable_load.rs  mutable_store.rs  query.rs  service.rs
lore-server/src/hooks/: lorehub_notify.rs  mod.rs
lore-server/src/plugins/: aws.rs  mod.rs  postgres.rs
lore-transport/src/auth/: ucs_auth.rs
scripts/test/: test_create_offline.py
